# dubstep-synth

./: .gitignore  Cargo.toml  README.md  RECIPES.md  dubstep_full_track_density_curve.csv  dubstep_full_track_density_curve.json
compositions/: mix_variation_1_doom_allcaps.json  mix_variation_1_doom_allcaps_v2.json  mix_variation_2_megan_savage.json  mix_variation_2_megan_savage_v2.json  mix_variation_3_doom_accordion.json  mix_variation_3_doom_accordion_v2.json  variation_1_doom_allcaps.json  variation_2_megan_savage.json  variation_3_doom_accordion.json
drum_machine/: Cargo.toml  VARIATIONS_SUMMARY.md  dubstep_drums.json  layered_dubstep.json  layered_dubstep_v2.json  layered_v3_balanced.json  layered_v3_bright.json  layered_v3_deep.json  layered_v3_punchy.json  layered_v3_punchy_96bars.json  layered_v3_tight.json
drum_machine/src/: main.rs  sample_loader.rs  synth.rs
src/: main.rs
track_composer/: Cargo.toml  dubstep_96bars_v2.json
track_composer/src/: main.rs
vocal-sep/: Cargo.toml  README.md  vocal_separation_contract.md  vocal_separation_plan.md
vocal-sep-backend/: README.md  requirements.txt  vocal-sep-backend
vocal-sep/src/: backend.rs  contract.rs  main.rs
vocal_stem/: Cargo.toml  REFERENCE.md  STATUS.md
vocal_stem/src/: key_detect.rs  pitch_shift.rs  vocal_extract.rs
