[package]
name = "vocal-sep"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
indicatif = "0.17"
anyhow = "1.0"
which = "6.0"

[[bin]]
name = "vocal-sep"
path = "src/main.rs"
